--- a/styles/g3styles.css
+++ b/styles/g3styles.css
@@ -4,4 +4,38 @@
 * {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
+    margin: 0%;
+}
+/* Header Style */
+header{
+    background: rgba(255, 144, 14, 0.10);
+    
+
+}
+.header-container{
+    display: flex;
+    justify-content: space-around;
+    
+}
+.nav-list{
+    padding-top: 63px;
+    padding-right: 230px;
+}
+nav ul{
+    display: flex;
+    list-style: none;
+}
+nav li a{
+    text-decoration: none;
+    color: #424242;
+    font-size: 18px;
+    font-weight: 500;
+    padding-left: 25px;
+}
+.nav-title{
+    color: #131313;
+        text-align: center;
+        font-size: 45px;
+        font-weight: 700;
+        padding: 50px 220px;
 }
