--- a/styles/g3styles.css
+++ b/styles/g3styles.css
@@ -6,36 +6,86 @@
     font-family: 'Work Sans', sans-serif;
     margin: 0%;
 }
+
 /* Header Style */
-header{
+header {
     background: rgba(255, 144, 14, 0.10);
-    
+
 
 }
-.header-container{
+
+.header-container {
     display: flex;
     justify-content: space-around;
-    
+    align-items: center;
+
 }
-.nav-list{
-    padding-top: 63px;
-    padding-right: 230px;
+
+.nav-list {
+    /* padding-top: 63px; */
+    padding-right: 10px;
+    /* padding-left: 70px; */
 }
-nav ul{
+
+nav ul {
     display: flex;
     list-style: none;
 }
-nav li a{
+
+nav li a {
     text-decoration: none;
     color: #424242;
     font-size: 18px;
     font-weight: 500;
     padding-left: 25px;
 }
-.nav-title{
+
+.nav-title {
     color: #131313;
-        text-align: center;
-        font-size: 45px;
-        font-weight: 700;
-        padding: 50px 220px;
+    font-size: 45px;
+    font-weight: 700;
+    padding: 50px 10px;
+}
+
+.banner-title {
+    color: #131313;
+    text-align: center;
+    font-size: 64px;
+    font-weight: 700;
+    padding: 105px 400px 30px 400px;
+}
+
+.banner-p {
+    color: #727272;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    padding-left: 290px;
+    padding-right: 290px;
+}
+
+.btn {
+    border-radius: 8px;
+    background: #FF900E;
+    width: 150px;
+    height: 60px;
+    color: #FFF;
+    text-align: center;
+    border: none;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 35px 700px;
+}
+
+.banner-pic {
+    display: flex;
+    justify-content: center;
+}
+
+.banner-img {
+    width: 1300px;
+    height: 600px;
+    padding-right: 70px;
+    padding-left: 70px;
+    padding-bottom: 50px;
 }
