--- a/styles/g3styles.css
+++ b/styles/g3styles.css
@@ -8,84 +8,71 @@
 }
 
 /* Header Style */
-header {
+header{
     background: rgba(255, 144, 14, 0.10);
-
-
+    padding: 50px 220px 50px 230px;
 }
-
-.header-container {
+.header-container{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-
+    justify-content: space-between;
 }
-
-.nav-list {
-    /* padding-top: 63px; */
-    padding-right: 10px;
-    /* padding-left: 70px; */
+.nav-title{
+    color: #131313;
+        text-align: center;
+        font-size: 38px;
+        font-weight: 700;
 }
-
-nav ul {
+.nav-list{
     display: flex;
+    
+}
+.li{
     list-style: none;
+    padding-left: 15px;
+    margin-top: 15px;
 }
-
-nav li a {
+nav a{
     text-decoration: none;
-    color: #424242;
-    font-size: 18px;
-    font-weight: 500;
-    padding-left: 25px;
+    color:  #424242;
+        text-align: center;
+        font-size: 18px;
+        font-weight: 500;
 }
-
-.nav-title {
+/* Banner Styles */
+/* .banner-container{
+    
+} */
+.banner-title{
     color: #131313;
-    font-size: 45px;
-    font-weight: 700;
-    padding: 50px 10px;
-}
+        text-align: center;
+        font-size: 55px;
+        font-weight: 700;
+        padding-top: 90px;
+    }
 
-.banner-title {
-    color: #131313;
-    text-align: center;
-    font-size: 64px;
-    font-weight: 700;
-    padding: 105px 400px 30px 400px;
-}
-
-.banner-p {
-    color: #727272;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    padding-left: 290px;
-    padding-right: 290px;
-}
-
-.btn {
-    border-radius: 8px;
-    background: #FF900E;
-    width: 150px;
-    height: 60px;
-    color: #FFF;
-    text-align: center;
-    border: none;
-    font-size: 20px;
-    font-weight: 600;
-    margin: 35px 700px;
-}
-
-.banner-pic {
-    display: flex;
-    justify-content: center;
-}
-
-.banner-img {
-    width: 1300px;
-    height: 600px;
-    padding-right: 70px;
-    padding-left: 70px;
-    padding-bottom: 50px;
-}
+    .banner-p{
+        color:#727272;
+            text-align: center;
+            font-size: 16px;
+            font-weight: 400;
+            padding-top: 20px;
+    }
+    .btn{
+        border-radius: 8px;
+            background: #FF900E;
+            color: #FFF;
+                text-align: center;
+                
+                font-size: 20px;
+                
+                font-weight: 600;
+                border: none;
+                width: 180px;
+                    height: 64px;
+                margin: 20px 300px;
+                    
+    }
+    .banner-img{
+        width: 100%;
+    }
+    
