--- a/styles/g3styles.css
+++ b/styles/g3styles.css
@@ -8,71 +8,157 @@
 }
 
 /* Header Style */
-header{
+header {
     background: rgba(255, 144, 14, 0.10);
     padding: 50px 220px 50px 230px;
 }
-.header-container{
+
+.header-container {
     display: flex;
     justify-content: space-between;
 }
-.nav-title{
+
+.nav-title {
     color: #131313;
-        text-align: center;
-        font-size: 38px;
-        font-weight: 700;
+    text-align: center;
+    font-size: 38px;
+    font-weight: 700;
 }
-.nav-list{
+
+.nav-list {
     display: flex;
-    
+
 }
-.li{
+
+.li {
     list-style: none;
     padding-left: 15px;
     margin-top: 15px;
 }
-nav a{
+
+nav a {
     text-decoration: none;
-    color:  #424242;
-        text-align: center;
-        font-size: 18px;
-        font-weight: 500;
+    color: #424242;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
 }
+
 /* Banner Styles */
 /* .banner-container{
     
 } */
-.banner-title{
+.banner-title {
     color: #131313;
-        text-align: center;
-        font-size: 55px;
-        font-weight: 700;
-        padding-top: 90px;
+    text-align: center;
+    font-size: 55px;
+    font-weight: 700;
+    padding-top: 90px;
+}
+
+.banner-p {
+    color: #727272;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    padding-top: 20px;
+}
+
+.btn {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    text-align: center;
+
+    font-size: 20px;
+
+    font-weight: 600;
+    border: none;
+    width: 180px;
+    height: 64px;
+    margin: 20px 300px;
+
+}
+
+.banner-img {
+    width: 100%;
+}
+
+/* Responsive Media */
+/* For Small Device */
+@media screen and (max-width:576px) {
+    header {
+        padding: 10px;
     }
 
-    .banner-p{
-        color:#727272;
-            text-align: center;
-            font-size: 16px;
-            font-weight: 400;
-            padding-top: 20px;
+    .header-container {
+        flex-direction: column;
     }
-    .btn{
-        border-radius: 8px;
-            background: #FF900E;
-            color: #FFF;
-                text-align: center;
-                
-                font-size: 20px;
-                
-                font-weight: 600;
-                border: none;
-                width: 180px;
-                    height: 64px;
-                margin: 20px 300px;
-                    
+
+    .nav-title {
+        font-size: 28px;
     }
-    .banner-img{
-        width: 100%;
+
+    nav a {
+        font-size: 17px;
+        text-align: center;
+        margin-left: 70px;
+        margin-right: 100px;
+        padding-right: 150px;
+        padding-left: 500px;
     }
+
+    .banner-title {
+        font-size: 35px;
+        padding-top: 45px;
+    }
+
+    .btn {
+        font-size: 15px;
+        width: 140px;
+        height: 50px;
+        margin: 20px 109px;
+    }
+}
+/* For Medium Device */
+@media screen and (min-width:576.01px) and (max-width:992px) {
+    header {
+            padding: 10px 25px 15px 1px;
+          
+        }
     
+        .header-container {
+            /* flex-direction: column; */
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
+    
+        .nav-title {
+            font-size: 32px;
+            padding-top: 18px;
+        }
+        .nav-list{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
+    
+        nav a {
+            font-size: 17px;
+        }
+    
+        .banner-title {
+            font-size: 35px;
+            padding-top: 45px;
+        }
+    
+        .btn {
+            font-size: 15px;
+            width: 140px;
+            height: 50px;
+            margin: 20px 350px;
+        }
+                .banner-img {
+                    width: 90%;
+                    padding-left: 50px;
+                }
+}
