--- a/styles/g3styles.css
+++ b/styles/g3styles.css
@@ -56,7 +56,9 @@ nav a {
     padding-top: 90px;
 }
 
-.banner-p {
+.banner-p,
+.feature-p,
+.card-p {
     color: #727272;
     text-align: center;
     font-size: 16px;
@@ -84,6 +86,141 @@ nav a {
     width: 100%;
 }
 
+/* Main Styles */
+/* Team Styles */
+.team-container {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    padding: 50px 270px;
+}
+
+.team-img>img {
+    width: 182px;
+    height: 182px;
+}
+
+.team-img {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+
+.btn2 {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    font-size: 20px;
+
+    font-weight: 600;
+    border: none;
+    width: 180px;
+    height: 44px;
+}
+
+.team-title {
+    color: #727272;
+    font-size: 38px;
+    font-weight: 500;
+}
+
+.team-title-middle {
+    color: #131313;
+}
+
+.team-title-last {
+    color: #FF900E;
+}
+
+.team-p {
+    color: #727272;
+    font-size: 16px;
+    font-weight: 400;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+/* Feature Styles */
+.feature {
+    display: flex;
+    /* justify-content: space-around; */
+    gap: 100px;
+    margin-left: 140px;
+    margin-right: 240px;
+}
+
+.feature-title {
+    color: #131313;
+    font-size: 40px;
+    font-weight: 700;
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.feature-container .feature-p {
+    text-align: start;
+    margin-bottom: 30px;
+}
+
+.card {
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    gap: 20px;
+    width: 486px;
+    height: 147px;
+    margin-bottom: 20px;
+
+}
+
+.card-title {
+    color: #131313;
+    font-size: 20px;
+    font-weight: 600;
+    padding-top: 30px;
+    padding-left: 30px;
+}
+
+.card .card-p {
+    text-align: start;
+    padding-left: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.feature-img>img {
+    width: 450px;
+    height: 800px;
+
+}
+
+.exp {
+    border-radius: 8px;
+    background: #FF900E;
+    width: 242px;
+    height: 100px;
+    text-align: center;
+    position: relative;
+    bottom: 50px;
+    right: 80px;
+}
+
+.exp h2 {
+    color: #FFF;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    padding-top: 20px;
+}
+
+.exp p {
+    color: #FFF;
+    font-size: 15px;
+    font-weight: 500;
+    padding: 0px 10px 10px 10px;
+}
+
+
 /* Responsive Media */
 /* For Small Device */
 @media screen and (max-width:576px) {
@@ -91,21 +228,19 @@ nav a {
         padding: 10px;
     }
 
-    .header-container {
+    .header-container,
+    .team-container {
         flex-direction: column;
     }
 
-    .nav-title {
+    .nav-title,
+    .team-title {
         font-size: 28px;
     }
 
     nav a {
         font-size: 17px;
         text-align: center;
-        margin-left: 70px;
-        margin-right: 100px;
-        padding-right: 150px;
-        padding-left: 500px;
     }
 
     .banner-title {
@@ -119,93 +254,69 @@ nav a {
         height: 50px;
         margin: 20px 109px;
     }
+
+    .team-img {
+        grid-template-columns: 1fr;
+    }
+
+    .team-container {
+
+        flex-direction: column-reverse;
+        padding: 50px 50px;
+    }
+
+    .btn2 {
+        font-size: 15px;
+        width: 140px;
+        height: 50px;
+    }
 }
+
 /* For Medium Device */
 @media screen and (min-width:576.01px) and (max-width:992px) {
     header {
-            padding: 10px 25px 15px 1px;
-          
-        }
-    
-        .header-container {
-            /* flex-direction: column; */
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-        }
-    
-        .nav-title {
-            font-size: 32px;
-            padding-top: 18px;
-        }
-        .nav-list{
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-        }
-    
-        nav a {
-            font-size: 17px;
-        }
-    
-        .banner-title {
-            font-size: 35px;
-            padding-top: 45px;
-        }
-    
-        .btn {
-            font-size: 15px;
-            width: 140px;
-            height: 50px;
-            margin: 20px 350px;
-        }
-                .banner-img {
-                    width: 90%;
-                    padding-left: 50px;
-                }
-}
+        padding: 10px 25px 15px 1px;
 
-/* Main Styles */
-/* Team Styles */
-.team-container{
-    display: flex;
-    align-items: center;
-    gap: 40px;
-    padding: 50px 270px;
-}
-.team-img > img{
-    width: 182px;
-    height: 182px;    
-}
-.team-img{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-}
-.btn2{
-    border-radius: 8px;
-        background: #FF900E;
-        color: #FFF;
-        font-size: 20px;
-        
-            font-weight: 600;
-            border: none;
-            width: 180px;
-            height: 44px;
-}
-.team-title{
-    color:  #727272;
-        font-size: 38px;
-        font-weight: 500;
-}
-.team-title-middle{
-    color: #131313;
-}
-.team-title-last{
-    color: #FF900E;
-}
-.team-p{
-    color: #727272;
-        font-size: 16px;
-        font-weight: 400;
-        padding-top: 20px;
-        padding-bottom: 20px;
+    }
+
+    .header-container {
+        /* flex-direction: column; */
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .nav-title {
+        font-size: 32px;
+        padding-top: 18px;
+    }
+
+    .nav-list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    nav a {
+        font-size: 17px;
+    }
+
+    .banner-title {
+        font-size: 35px;
+        padding-top: 45px;
+    }
+
+    .btn {
+        font-size: 15px;
+        width: 140px;
+        height: 50px;
+        margin: 20px 350px;
+    }
+
+    .banner-img {
+        width: 90%;
+        padding-left: 50px;
+    }
+
+    .team-container {
+        padding: 50px 50px;
+    }
 }
